QBtn: clean up leftover flex classes, make spinner smaller to avoid jumpiness due to rounding errors

--- a/src/components/btn/btn-default.ios.styl
+++ b/src/components/btn/btn-default.ios.styl
@@ -1,7 +1,4 @@
 .q-btn
-  display inline-flex
-  align-items center
-  justify-content center
   outline 0
   border 0
   vertical-align middle
@@ -17,8 +14,8 @@
   .q-icon
     font-size 1.4em
   .q-spinner
-    height 1.4em
-    width 1.4em
+    height 1.39em
+    width 1.39em
 
   &.disabled
     opacity .7 !important
